[workspace]
members = [
    "node-common",
    "jni-export",
    "core-api-server",
    "state-manager",
]
resolver = "2"

[workspace.dependencies]
# DEPENDENCIES ON RADIXDLT-SCRYPTO
#
# To make builds reproducible, for merged in node code, please specify a fixed tag below, not a branch.
# 
# * In development, feel free to use branch="branch-name", instead of tag="X"
# * When ready to put in a PR to the node, please merge your upstream PR into develop.
# * Then create a tag in radixdlt-scrypto against the develop branch:
#   $ git checkout release/release_name
#   $ git pull
#   $ git rev-parse --short HEAD | cut -c1-8
#   $ git tag "release_name-<8 char hash id from previous command>"
#   $ git push origin "release_name-BLAH"
# * Then use tag="release_name-BLAH" in the below dependencies.
# 
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0", features = ["serde"] }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0" }
radix-transaction-scenarios = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0", features = ["serde"] }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0" }
radix-substate-store-impls = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0" }
radix-substate-store-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0" }
radix-substate-store-queries = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0" }
radix-rust = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0", features = ["serde"] }
radix-blueprint-schema-init = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "bottlenose-b82a7db0", features = ["serde"] }

itertools = { version = "=0.10.5" }
jni = { version = "=0.19.0" }
tracing = { version = "=0.1.37" }
tokio = { version = "=1.32.0", features = ["full"] }
tokio-util = { version = "=0.7.9" }
prometheus = { version = "=0.13.3", default-features = false, features = [] }
blake2 = { version = "=0.10.6", default-features = false }
serde = { version = "=1.0.185", features = ["derive"] }
serde_json = { version = "=1.0.105", features = ["preserve_order"] }
chrono = { version = "=0.4.26", default-features = false, features = ["std"] }
hex = { version = "=0.4.3", default-features = false }

[profile.dev]
opt-level = 3

# Recommended settings for wasmi for best performance
#  see: https://github.com/paritytech/wasmi/blob/master/CHANGELOG.md#0140---2022-07-26
[profile.release]
lto = "fat"
codegen-units = 1
