[workspace]
members = [
    "node-common",
    "jni-export",
    "core-api-server",
    "engine-state-api-server",
    "state-manager",
]
resolver = "2"

[workspace.dependencies]
# DEPENDENCIES ON RADIXDLT-SCRYPTO
#
# To make builds reproducible, for merged in node code, please specify a fixed tag below, not a branch.
# 
# * In development, feel free to use branch="branch-name", instead of tag="X"
# * When ready to put in a PR to the node, please merge your upstream PR into develop.
# * Then create a tag in radixdlt-scrypto against the develop branch:
#   $ git checkout release/release_name
#   $ git pull
#   $ git rev-parse --short HEAD | cut -c1-8
#   $ git tag "release_name-<8 char hash id from previous command>"
#   $ git push origin "release_name-BLAH"
# * Then use tag="release_name-BLAH" in the below dependencies.
# 
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973", features = ["serde"] }
radix-transactions = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973" }
radix-transaction-scenarios = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973" }
radix-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973", features = ["serde"] }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973" }
radix-substate-store-impls = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973" }
radix-substate-store-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973" }
radix-substate-store-queries = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973" }
radix-rust = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973", features = ["serde"] }
radix-blueprint-schema-init = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "develop-c02973", features = ["serde"] }

itertools = { version = "=0.10.5" }
jni = { version = "=0.19.0" }
tracing = { version = "=0.1.40" }
tokio = { version = "=1.32.0", features = ["full"] }
tokio-util = { version = "=0.7.9" }
prometheus = { version = "=0.13.3", default-features = false, features = [] }
blake2 = { version = "=0.10.6", default-features = false }
serde = { version = "=1.0.185", features = ["derive"] }
serde_json = { version = "=1.0.105", features = ["preserve_order"] }
serde_with = { version = "=2.3.0", features = ["hex"] }
chrono = { version = "=0.4.26", default-features = false, features = ["std"] }
hex = { version = "=0.4.3", default-features = false }
rand = { version = "=0.8.5" }
futures = { version = "=0.3.28" }
futures-util = { version = "=0.3.28" }
axum = { version = "=0.6.20", features = ["http1", "json"] }
tower = { version = "=0.4.13" }
tower-http = { version = "=0.4.3", features = ["catch-panic"]}
hyper = { version = "=0.14.27", features = ["server", "http1"] }
paste = { version = "=1.0.14", default-features = false }

[profile.dev]
opt-level = 3

# Recommended settings for wasmi for best performance
#  see: https://github.com/paritytech/wasmi/blob/master/CHANGELOG.md#0140---2022-07-26
[profile.release]
lto = "fat"
codegen-units = 1
