[package]
name = "statemanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
sbor = { git="https://github.com/radixdlt/radixdlt-scrypto", branch="develop" }
scrypto = { git="https://github.com/radixdlt/radixdlt-scrypto", branch="develop" }
transaction = { git="https://github.com/radixdlt/radixdlt-scrypto", branch="develop" }
radix-engine = { git="https://github.com/radixdlt/radixdlt-scrypto", branch="develop" }

[lib]
crate_type = ["cdylib"]