[package]
name = "statemanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"

# DEPENDENCIES ON RADIXDLT-SCRYPTO
#
# To make builds reproducible, for merged in node code, please specify a fixed tag below, not a branch.
# 
# * In development, feel free to use branch="branch-name", instead of tag="X"
# * When ready to put in a PR to the node, please merge your upstream PR into develop.
# * Then create a tag in radixdlt-scrypto against the develop branch:
#   $ git checkout develop
#   $ git pull
#   $ git rev-parse --short HEAD
#   $ git tag "develop-<6 char hash id from previous command>"
#   $ git push "develop-BLAH"
# * Then use tag="develop-BLAH" in the below dependencies.
#
sbor = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="lukasz-9e915091" }
scrypto = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="lukasz-9e915091" }
transaction = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="lukasz-9e915091" }
radix-engine = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="lukasz-9e915091" }
radix-engine-stores = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="lukasz-9e915091" }

# Core API server deps
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = "5.0.2"
log = "0.4.0"
mime = "0.3"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = {version = "0.13" }
serde_ignored = {version = "0.1.1" }
url = {version = "2.1" }
lazy_static = { version = "1.4" }
regex = {version = "1.3" }
# Conversion
frunk = { version = "0.3.0" }
frunk_derives = { version = "0.3.0" }
frunk_core = { version = "0.3.0" }
frunk-enum-derive = { version = "0.2.0" }
frunk-enum-core = { version = "0.2.0" }

[lib]
crate_type = ["cdylib"]

[profile.dev]
opt-level = 3