[package]
name = "statemanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"

# DEPENDENCIES ON RADIXDLT-SCRYPTO
#
# To make builds reproducible, for merged in node code, please specify a fixed tag below, not a branch.
# 
# * In development, feel free to use branch="branch-name", instead of tag="X"
# * When ready to put in a PR to the node, please merge your upstream PR into develop.
# * Then create a tag in radixdlt-scrypto against the develop branch:
#   $ git checkout develop
#   $ git pull
#   $ git rev-parse --short HEAD
#   $ git tag "develop-<6 char hash id from previous command>"
#   $ git push origin "develop-BLAH"
# * Then use tag="develop-BLAH" in the below dependencies.
#
sbor = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="develop-9023d96" }
scrypto = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="develop-9023d96" }
transaction = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="develop-9023d96" }
radix-engine = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="develop-9023d96" }
radix-engine-stores = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="develop-9023d96" }
rocksdb = { version = "0.18.0" }

[lib]
crate_type = ["cdylib"]

[profile.dev]
opt-level = 3