[package]
name = "core-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
state-manager = { path = "../state-manager" }
parking_lot = { version = "0.12" }

# DEPENDENCIES ON RADIXDLT-SCRYPTO
#
# To make builds reproducible, for merged in node code, please specify a fixed tag below, not a branch.
#
# * In development, feel free to use branch="branch-name", instead of tag="X"
# * When ready to put in a PR to the node, please merge your upstream PR into develop.
# * Then create a tag in radixdlt-scrypto against the develop branch:
#   $ git checkout develop
#   $ git pull
#   $ git rev-parse --short HEAD
#   $ git tag "develop-<8 char hash id from previous command>"
#   $ git push origin "develop-BLAH"
# * Then use tag="develop-BLAH" in the below dependencies.
#
# Ensure this version is also identically updated in ../state-manager/Cargo.toml
#
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v2-27ee0f60e", features = ["serde", "indexmap"] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v2-27ee0f60e" }
radix-engine-interface = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v2-27ee0f60e", features = ["serde"]  }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v2-27ee0f60e" }
radix-engine-constants = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v2-27ee0f60e" }
radix-engine-stores = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v2-27ee0f60e" }
utils = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "betanet-v2-27ee0f60e" }

jni = "0.19.0"

serde = { version = "1.0.81", features = ["derive"] }
serde_json = { version = "1.0.81" }
hex = { version = "0.4.3", default-features = false }
futures = "0.3"
chrono = { version = "0.4.23", default-features = false, features = ["std"] }

prometheus = { version = "0.13.2", default-features = false, features = [] }
tracing = { version = "0.1" }
tracing-opentelemetry = "0.18"
tracing-subscriber = { version = "0.3.15" }
opentelemetry = { version = "0.18", default-features = false, features = [
  "rt-tokio",
  "trace",
] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }

### TYPES FOR THE SERVER
# Axum - see https://docs.rs/axum/latest/axum/#required-dependencies
axum = { version = "0.5.15", features = ["http1", "json"] }
# Tower HTTP - Axum middleware
tower-http = { version = "0.3.4", default-features = false, features = [
  "limit",
] }
# Hyper - see https://docs.rs/axum/latest/axum/#required-dependencies
hyper = { version = "0.14.20", features = ["server", "http1"] }
# Tokio - see https://docs.rs/tokio/latest/tokio/
tokio = { version = "1.21.0", features = ["rt-multi-thread"] }
