[package]
name = "core-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
node-common = { path = "../node-common" }
state-manager = { path = "../state-manager" }

sbor = { workspace = true }
transaction = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-interface = { workspace = true }
radix-engine = { workspace = true }
radix-engine-constants = { workspace = true }
radix-engine-stores = { workspace = true }
radix-engine-store-interface = { workspace = true }
radix-engine-queries = { workspace = true }
utils = { workspace = true }

# Non-Radix Engine Dependencies:
jni = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
prometheus = { workspace = true }
blake2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

chrono = { version = "0.4.23", default-features = false, features = ["std"] }
hex = { version = "0.4.3", default-features = false }
futures = { version = "0.3" }
axum = { version = "0.6.6", features = ["http1", "json"] }
tower-http = { version = "0.4.0", features = ["catch-panic"] }
hyper = { version = "0.14.20", features = ["server", "http1"] }
paste = { version = "1.0.12", default-features = false }
