[package]
name = "jni-export"
version = "0.1.0"
edition = "2021"

[dependencies]
node-common = { path = "../node-common" }
state-manager = { path = "../state-manager" }
node-http-apis = { path = "../node-http-apis" }

sbor = { workspace = true }
transaction = { workspace = true }
transaction-scenarios = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-interface = { workspace = true }
radix-engine = { workspace = true }
radix-engine-stores = { workspace = true }
radix-engine-store-interface = { workspace = true }
radix-engine-queries = { workspace = true }
utils = { workspace = true }

# Non-Radix Engine Dependencies:
jni = { workspace = true }

[lib]
name = "corerust"
crate_type = ["cdylib"]
