[package]
name = "jni-export"
version = "0.1.0"
edition = "2021"

[dependencies]
node-common = { path = "../node-common" }
state-manager = { path = "../state-manager" }
core-api-server = { path = "../core-api-server" }

sbor = { workspace = true }
radix-transactions = { workspace = true }
radix-transaction-scenarios = { workspace = true }
radix-common = { workspace = true }
radix-engine-interface = { workspace = true }
radix-engine = { workspace = true }
radix-substate-store-impls = { workspace = true }
radix-substate-store-interface = { workspace = true }
radix-substate-store-queries = { workspace = true }
radix-rust = { workspace = true }

# Non-Radix Engine Dependencies:
jni = { workspace = true }

[lib]
name = "corerust"
crate_type = ["cdylib"]
