[package]
name = "jni-export"
version = "0.1.0"
edition = "2021"

[dependencies]
node-common = { path = "../node-common" }
state-manager = { path = "../state-manager" }
core-api-server = { path = "../core-api-server" }
engine-state-api-server = { path = "../engine-state-api-server" }

sbor = { workspace = true }
transaction = { workspace = true }
transaction-scenarios = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-interface = { workspace = true }
radix-engine = { workspace = true }
substate-store-impls = { workspace = true }
substate-store-interface = { workspace = true }
substate-store-queries = { workspace = true }
utils = { workspace = true }

# Non-Radix Engine Dependencies:
jni = { workspace = true }

[lib]
name = "corerust"
crate_type = ["cdylib"]
