[package]
name = "node-common"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { workspace = true }
transaction = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-interface = { workspace = true }
radix-engine = { workspace = true }
radix-engine-constants = { workspace = true }
radix-engine-stores = { workspace = true }
radix-engine-store-interface = { workspace = true }
radix-engine-queries = { workspace = true }
utils = { workspace = true }

# Non-Radix Engine Dependencies:
jni = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
prometheus = { workspace = true }
blake2 = { workspace = true }
bech32 = { version = "0.9.0", default-features = false }

tracing-opentelemetry = { version = "0.18" }
tracing-subscriber = { version = "0.3.15" }
opentelemetry = { version = "0.18", default-features = false, features = [
  "rt-tokio",
  "trace",
] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio"] }

