[package]
name = "node-common"
version = "0.1.0"
edition = "2021"

[dependencies]
sbor = { workspace = true }
radix-transactions = { workspace = true }
radix-common = { workspace = true }
radix-engine-interface = { workspace = true }
radix-engine = { workspace = true }
radix-substate-store-impls = { workspace = true }
radix-substate-store-interface = { workspace = true }
radix-substate-store-queries = { workspace = true }
radix-rust = { workspace = true }

# Non-Radix Engine Dependencies:
jni = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
prometheus = { workspace = true }
blake2 = { workspace = true }

bech32 = { version = "=0.9.1", default-features = false }
parking_lot = { version = "=0.12.1" }
tracing-opentelemetry = { version = "=0.18.0" }
tracing-subscriber = { version = "=0.3.17" }
opentelemetry = { version = "=0.18.0", default-features = false, features = ["rt-tokio", "trace"] }
opentelemetry-jaeger = { version = "=0.17.0", features = ["rt-tokio"] }
