[package]
name = "state-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
node-common = { path = "../node-common" }

sbor = { workspace = true }
transaction = { workspace = true }
transaction-scenarios = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-interface = { workspace = true }
radix-engine = { workspace = true }
substate-store-impls = { workspace = true }
substate-store-interface = { workspace = true }
substate-store-queries = { workspace = true }
utils = { workspace = true }

# Non-Radix Engine Dependencies:
itertools = { workspace = true }
jni = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
prometheus = { workspace = true }
blake2 = { workspace = true }

rocksdb = { version = "0.21.0" }
hex = { version = "0.4.3", default-features = false }
lru = { version = "0.8.0", default-features = false }
slotmap = { version = "1.0.6" }
im = { version = "15.1.0" }
rand = { version = "0.8.5" }

[dev-dependencies]
tempfile = { version = "3.4.0" }
chrono = { workspace = true }
