[package]
name = "state-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
node-common = { path = "../node-common" }

sbor = { workspace = true }
radix-transactions = { workspace = true }
radix-transaction-scenarios = { workspace = true }
radix-common = { workspace = true }
radix-engine-interface = { workspace = true }
radix-engine = { workspace = true }
radix-substate-store-impls = { workspace = true }
radix-substate-store-interface = { workspace = true }
radix-substate-store-queries = { workspace = true }
radix-rust = { workspace = true }
scrypto-test = { workspace = true }

# Non-Radix Engine Dependencies:
itertools = { workspace = true }
jni = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
prometheus = { workspace = true }
blake2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

rocksdb = { version = "=0.21.0" }
lru = { version = "=0.8.1", default-features = false }
slotmap = { version = "=1.0.6" }
im = { version = "=15.1.0" }

[dev-dependencies]
tempfile = { version = "=3.8.0" }
chrono = { workspace = true }

[features]
db_checker = ["radix-engine/db_checker"]
rocksdb = ["radix-substate-store-impls/rocksdb"]