[package]
name = "core-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
state-manager = { path = "../state-manager" }

# DEPENDENCIES ON RADIXDLT-SCRYPTO
#
# To make builds reproducible, for merged in node code, please specify a fixed tag below, not a branch.
#
# * In development, feel free to use branch="branch-name", instead of tag="X"
# * When ready to put in a PR to the node, please merge your upstream PR into develop.
# * Then create a tag in radixdlt-scrypto against the develop branch:
#   $ git checkout develop
#   $ git pull
#   $ git rev-parse --short HEAD
#   $ git tag "develop-<6 char hash id from previous command>"
#   $ git push "develop-BLAH"
# * Then use tag="develop-BLAH" in the below dependencies.
#
sbor = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="encodeable-receipt-11a5be" }
scrypto = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="encodeable-receipt-11a5be" }
transaction = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="encodeable-receipt-11a5be" }
radix-engine = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="encodeable-receipt-11a5be" }
radix-engine-stores = { git="https://github.com/radixdlt/radixdlt-scrypto", tag="encodeable-receipt-11a5be" }

jni = "0.19.0"

# Deps for generated models and the Hyper server
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "6.1", features = ["serdejson", "server", "tcp"] }
log = "0.4.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = {version = "0.14.20", features = ["server", "stream", "http1"]}
serde_ignored = "0.1.1"
url = "2.1"
lazy_static = "1.4"
regex = "1.3"
